@@ -1,3 +1,7 @@
+
+Courtney Cavin - Wed Oct 20 2004
+	added calculator
+
 Jens Taprogge - Fri July 27 2004
 	lots of improvements around the new iTunesDB browser. Including
 	playlist support (just the normal ones so far). Depends on libitunesdb
